[gd_scene load_steps=12 format=3 uid="uid://br0n6k6fk4p1e"]

[ext_resource type="Script" uid="uid://cy6lwjnaegapl" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://djsmm1fvayngy" path="res://assets/sky.png" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bh5xq71erjeow" path="res://scenes/dragon.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://ch5y2qiiv3jj2" path="res://scenes/coin.tscn" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://drxp8ydvq73vg" path="res://scenes/building.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://dbkpidto345ti" path="res://scenes/game_over.tscn" id="3_tefeu"]
[ext_resource type="Theme" uid="uid://bl4hu5la863p3" path="res://themes/label.tres" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://xcqliphueso" path="res://scenes/gold_ui.tscn" id="8_tipki"]
[ext_resource type="AudioStream" uid="uid://cswta1mpm0fba" path="res://assets/Happy Alley.mp3" id="9_ya4ey"]
[ext_resource type="AudioStream" uid="uid://c1b1gjesjqf1c" path="res://assets/game_over_sound.mp3" id="10_eb6dy"]
[ext_resource type="AudioStream" uid="uid://das36jcoskekt" path="res://assets/Pickup.wav" id="11_trceg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")
building_scene = ExtResource("3_sugp2")
coin_scene = ExtResource("3_o6xl0")
game_over_scene = ExtResource("3_tefeu")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -10
motion_mirroring = Vector2(272, 0)

[node name="Sky" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("1_o5qli")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 272, 160)

[node name="Dragon" parent="." instance=ExtResource("2_0wfyh")]
position = Vector2(38, 70)

[node name="BuildingTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_right = 15.0
offset_bottom = 29.0
grow_horizontal = 2
theme = ExtResource("5_tbgi4")
text = "0
"
horizontal_alignment = 1

[node name="GoldUI" parent="." instance=ExtResource("8_tipki")]
is_in_main_scene = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ya4ey")
volume_db = -10.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_eb6dy")
volume_db = -15.0

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_trceg")
volume_db = -15.0

[connection signal="hit" from="Dragon" to="." method="_on_dragon_hit"]
[connection signal="timeout" from="BuildingTimer" to="." method="_on_building_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
